# comrade

./: .clang-format  CMakeLists.txt
pdf_viewer/: OpenWithApplication.cpp  OpenWithApplication.h  RunGuard.cpp  RunGuard.h  book.cpp  book.h  checksum.cpp  checksum.h  command_manager.cpp  command_manager.h  config.cpp  config.h  coordinates.cpp  coordinates.h  database.cpp  database.h  document.cpp  document.h  document_view.cpp  document_view.h  fts_fuzzy_match.h  input.cpp  input.h  keys.config  main.cpp  main_widget.cpp  main_widget.h  new_file_checker.cpp  new_file_checker.h  path.cpp  path.h  pdf_renderer.cpp  pdf_renderer.h  pdf_view_opengl_widget.cpp  pdf_view_opengl_widget.h  prefs.config  sqlite3.h  sqlite3ext.h  ui.cpp  ui.h  (+2 more)
pdf_viewer/commands/: add_bookmark_command.h  add_highlight_command.h  add_highlight_with_current_type_command.h  all_commands.h  chapter_search_command.h  clear_status_string_command.h  close_overview_command.h  close_visual_mark_command.h  close_window_command.h  command.cpp  command.h  command_command.h  config_command.h  copy_command.h  copy_link_command.h  copy_window_size_config_command.h  custom_command.h  delete_bookmark_command.h  delete_highlight_command.h  delete_highlight_under_cursor_command.h  delete_portal_command.h  edit_portal_command.h  embed_annotations_command.h  enter_password_command.h  enter_visual_mark_mode_command.h  escape_command.h  execute_command.h  export_command.h  external_search_command.h  fit_to_page_height_command.h  fit_to_page_height_smart_command.h  fit_to_page_ratio_command.h  fit_to_page_smart_command.h  fit_to_page_width_command.h  focus_text_command.h  go_bottom_of_page_command.h  go_top_of_page_command.h  goto_beggining_command.h  goto_bookmark_command.h  goto_bookmark_global_command.h  (+110 more)
pdf_viewer/synctex/: synctex_parser.h  synctex_parser_advanced.h  synctex_parser_local.h  synctex_parser_utils.h  synctex_version.h
pdf_viewer/ui/selectors/: base_selector.cpp  base_selector.h  command_selector.cpp  command_selector.h  file_selector.cpp  file_selector.h  filtered_table_window_selector.h  filtered_tree_selector.cpp  filtered_tree_selector.h  filtered_window_selector.h
pdf_viewer/utf8/: checked.h  core.h  unchecked.h
